# FileMeaneger

./: CMakeLists.txt  FileMeaneger.cpp  README.md  build.bat  build.sh
.github/workflows/: release.yml
